Cambios personalizados KIP

--- a/src/themes/_m3dark.scss
+++ b/src/themes/_m3dark.scss
@@ -149,11 +149,11 @@ $kip-dark-color: (
   grey: #B5B5B5, grey-dim: #B5B5B5b6, grey-dimmer: #1a1a1a,
   port: #8F0000,
   starboard: #008700,
-  zone-nominal: #0164FA,
+  zone-nominal: #00C853,
   zone-alert: #ffff60,
   zone-warn: #ff8d41,
   zone-alarm: #dd0000,
-  zone-emergency: #ff0000,
+  zone-emergency: #ff00d0,
   widget-card-background-color: #{$_widget-card-background-color},
   widget-card-border-color: #252525,
   background: #{$_background}
