--- a/src/themes/_m3light.scss
+++ b/src/themes/_m3light.scss
@@ -18,11 +18,11 @@ $kip-light-color: (
   grey: #666666, grey-dim: #666666b6, grey-dimmer: #66666629,
   port: #b70000,
   starboard: #008700,
-  zone-nominal: #0182fa,
+  zone-nominal: #00C853,
   zone-alert: #f0f032,
   zone-warn: #ff8534,
   zone-alarm: #ff0000,
-  zone-emergency: #741e1e,
+  zone-emergency: #ff00d0,
   widget-card-background-color: #{$_widget-card-background-color},
   widget-card-border-color: #252525,
   background: #{$_background}
