--- a/src/themes/_m3night.scss
+++ b/src/themes/_m3night.scss
@@ -150,11 +150,11 @@ $kip-night-color: (
   grey: #520000, grey-dim: #520000b6, grey-dimmer: #260000c5,
   port: #800000,
   starboard: #005500,
-  zone-nominal: #001d49,
+  zone-nominal: #00C853,
   zone-alert: #2c2c00,
   zone-warn: #441e00,
   zone-alarm: #850000,
-  zone-emergency: #bd0000,
+  zone-emergency: #ff00d0,
   widget-card-background-color: #{$_widget-card-background-color},
   widget-card-border-color: #252525,
   background: #{$_background}
